# Haibara-lang

./: .gitignore  README.md  main.py  run.sh  test.txt
frontend/: cst_to_gir.py
interpret/: interpreter.py  session.py  value_env.py
test/: copyright_law.hai  quick_cmake.hai  quick_save.hai
tree-sitter-haibara/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-haibara/bindings/c/: tree-sitter-haibara-parser.pc.in
tree-sitter-haibara/bindings/c/tree_sitter/: tree-sitter-haibara-parser.h
tree-sitter-haibara/bindings/go/: binding.go  binding_test.go
tree-sitter-haibara/bindings/node/: binding.cc  index.js
tree-sitter-haibara/bindings/python/tests/: test_binding.py
tree-sitter-haibara/bindings/python/tree_sitter_haibara_parser/: __init__.py  binding.c
tree-sitter-haibara/bindings/rust/: build.rs  lib.rs
tree-sitter-haibara/bindings/swift/TreeSitterHaibaraParserTests/: TreeSitterHaibaraParserTests.swift
tree-sitter-haibara/src/: grammar.json  node-types.json  parser.c
util/: dev_util.py  gir_content_util.py  node_util.py
