[package]
name = "tree-sitter-haibara-parser"
description = "A parser for the Haibara LLM query language"
version = "0.1.0"
authors = ["Heng Zhong"]
license = "GPL-3.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "haibara-parser"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/heng-zhong-2003/bachelor-thesis-project"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.2"
