[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-haibara-parser"
description = "A parser for the Haibara LLM query language"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "haibara-parser"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Heng Zhong" }]
requires-python = ">=3.10"
license.text = "GPL-3.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/heng-zhong-2003/bachelor-thesis-project"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
